--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,31 @@
  *= require_tree .
  *= require_self
  */
-body { padding-top: 100px; }
+body { padding-top: 60px; }
 footer { margin-top: 100px; }
 table, td, th { vertical-align: middle; border: none; }
 th { border-bottom: 1px solid #DDD; }
+
+.navbar {
+  min-height: 38px !important;
+  background-color: #f55eaa !important;
+}
+
+.navbar a.brand { font-size: 18px !important; }
+.navbar a.brand:hover {
+  color: #fff !important;
+  background-color: transparent ;
+  text-decoration: none !important;
+}
+
+.container a:hover {
+  color: #f55e55 ;
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0) !important;
+}
+
+footer {
+  background-color: #ebebeb ;
+  padding: 30px 0;
+}
+
